--- a/media/css/bootstrap-custom-rtl.css
+++ b/media/css/bootstrap-custom-rtl.css
@@ -1,12 +1,17 @@
+/**
+ * @version 1.0.0
+ * @package Perfect Easy & Powerful Contact Form
+ * @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
+ * @license http://www.gnu.org/licenses/gpl-3.0.html GNU/GPL
+ * @author Piotr Moćko
+ */
+
 /*!
  * Bootstrap v2.3.2
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
- *
- * @version 3.0.3
- * @package PWebContact
  * 
  * Redeclared styles only for contact form
  */
