--- a/media/css/animations.css
+++ b/media/css/animations.css
@@ -1,10 +1,10 @@
 /**
-* @version 3.2.5
-* @package PWebContact
-* @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
-* @license GNU General Public License http://www.gnu.org/licenses/gpl-3.0.html
-* @author Piotr Moæko
-*/
+ * @version 1.0.0
+ * @package Perfect Easy & Powerful Contact Form
+ * @copyright Â© 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
+ * @license http://www.gnu.org/licenses/gpl-3.0.html GNU/GPL
+ * @author Piotr MoÄ‡ko
+ */
 
 /* Transfer effects
  * ---------------------------------------------------------------------
