--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -14,6 +14,8 @@ form.pwebcontact-form .btn {
 
 .pwebcontact,
 .pwebcontact *,
+.pweb-modal,
+.pweb-modal *,
 .pwebcontact_toggler {
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
@@ -507,6 +509,11 @@ form.pwebcontact-form .btn {
  /* Lightbox Window
   * ---------------------------------------------------------------------
   */
+.pweb-modal.modal {
+	overflow: visible;
+	overflow-y: initial;
+	bottom: initial;
+}
 .pwebcontact-modal.modal {
 	position: fixed !important;
 	left: 0 !important;
