--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -216,6 +216,7 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     top: 0px;
     z-index: 1;
     width: 100%;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -284,6 +285,7 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     margin: 0 70px 60px 0;
     min-height: 70px;
     border: 2px dashed rgba(0,0,0, 0.1);
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     cursor: pointer;
@@ -487,6 +489,9 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 .pweb-advanced-options-content {
     display: none;
 }
+#pweb_fields_types .pweb-advanced-options {
+    padding-top: 20px;
+}
 
 
 .pweb-field {
@@ -555,7 +560,9 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     float: left;
     padding: 0 3px;
     min-height: 50px;
-    border: 2px dashed rgba(0,0,0, 0.2);
+    border: 2px dashed #c1c1c1;
+    border-color: rgba(0,0,0, 0.2);
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     transition: border 0.4s;
@@ -564,6 +571,7 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 #pweb_fields .pweb-fields-col:hover,
 #pweb_fields .pweb-fields-add-col:hover,
 #pweb_fields .pweb-fields-add-row:hover,
+#pweb_fields .pweb-fields-sort-row:hover,
 #pweb_fields .pweb-fields-row.pweb-dragged .pweb-fields-col {
     border-color: #0074A2;
 }
@@ -597,18 +605,20 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 #pweb_fields .pweb-fields-add-row,
 #pweb_fields .pweb-fields-remove-col {
     line-height: 46px;
-    color: rgba(0,0,0, 0.2);
+    color: #919191;
+    color: rgba(0,0,0, 0.4);
     cursor: pointer;
     text-align: center;
+    vertical-align: top;
 }
 #pweb_fields .pweb-fields-cols {
+    position: relative;
     display: inline-block;
     float: left;
     width: 84%;
     min-height: 50px;
 }
 #pweb_fields .pweb-fields-sort-row {
-    border: 0;
     width: 5%;
     margin-right: 1%;
     font-weight: bold;
@@ -662,49 +672,54 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     cursor: move !important;
 }
 #pweb_fields .pweb-fields-cols .pweb-sortable-placeholder {
-    display: inline-block;
     float: left;
-    border: 0 solid #0074A2;
-    border-left-width: 5px;
-    width: 0;
+    display: inline-block;
+    border: 2px solid #0074A2;
+    width: 99%;
     height: 50px;
     overflow: hidden;
-    margin: 0 0 0 -5px;
-}
-#pweb_fields .pweb-fields-cols .pweb-sortable-placeholder:first-child {
-    margin: 0 -5px 0 0;
-}
-
-#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-sortable-placeholder,
-#pweb_fields .pweb-fields-row.pweb-fields-cols-1 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder,
-#pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder,
-#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder {
-    border-width: 2px;
+    margin: 0 1% 0 0;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-sortable-placeholder {
-    width: 32%;
-    margin: 0 -32% 0 0;
-    position: relative;
-    z-index: 1;
+#pweb_fields .pweb-fields-cols .pweb-sortable-placeholder:first-child {
+    margin-bottom: 10px;
 }
-#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-sortable-placeholder:last-child {
-    margin: 0 0 0 -33.333%;
+#pweb_fields .pweb-fields-cols .pweb-sortable-placeholder:last-child {
+    margin-top: 10px;
 }
 
-#pweb_fields .pweb-fields-row.pweb-fields-cols-1 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder {
-    width: 99%;
-    margin: 0 1% 0 0;
+#pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder-top,
+#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder-top {
+    padding-top: 60px;
 }
+#pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder,
+#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder {
+    padding-top: 0;
+}
+
+#pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder-top .pweb-sortable-placeholder,
+#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder-top .pweb-sortable-placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#pweb_fields .pweb-fields-row.pweb-fields-cols-1 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder,
+#pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder,
+#pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder {
+    margin-top: 0;
+    margin-bottom: 0;
+    position: static;
+}
+
 #pweb_fields .pweb-fields-row.pweb-fields-cols-2 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder {
     width: 49%;
-    margin: 0 1% 0 0;
 }
 #pweb_fields .pweb-fields-row.pweb-fields-cols-3 .pweb-fields-cols.pweb-placeholder .pweb-sortable-placeholder {
     width: 32%;
-    margin: 0 1.333% 0 0;
 }
+
 
 #pweb_fields .pweb-fields-cols .pweb-custom-field-container {
     float: left;
@@ -747,6 +762,7 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     border-radius: 3px;
     -webkit-box-shadow: 1px 1px 3px rgba(0,0,0, 0.4);
     box-shadow: 1px 1px 3px rgba(0,0,0, 0.4);
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     cursor: move;
@@ -801,17 +817,20 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 
 #pweb_fields .pweb-droppable,
 #pweb_fields .pweb-droppable.pweb-has-field {
-    background-color: #C1D8E1;
-    background-color: rgba(0,116,162, 0.2);
+    background-color: #f4f4c1;
+    background-color: rgba(255,255,0, 0.2);
 }
 #pweb_fields .pweb-fields-add-row.pweb-droppable,
 #pweb_fields .pweb-fields-add-col.pweb-droppable {
-    color: #0074A2;
+    color: #555;
 }
 #pweb_fields .pweb-droppable-hover,
 #pweb_fields .pweb-droppable-hover.pweb-has-field {
-    background-color: #308DB2;
-    background-color: rgba(0,116,162, 0.8);
+    background-color: #fcfc30;
+    background-color: rgba(255,255,0, 0.8);
+    border-style: solid;
+    border-color: #97971d;
+    border-color: rgba(0,0,0, 0.4);
 }
 #pweb_fields .pweb-fields-add-row.pweb-droppable-hover,
 #pweb_fields .pweb-fields-add-col.pweb-droppable-hover {
