--- a/media/css/layout-rtl.css
+++ b/media/css/layout-rtl.css
@@ -67,7 +67,8 @@
 }
 .pweb-rtl form.pwebcontact-form input.pweb-checkbox, 
 .pweb-rtl form.pwebcontact-form input.pweb-radio {
-	float: right;
+	margin: 3px 0 0 3px;
+    float: right;
 }
 
 /* Labels inline with fields */
