--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -1,5 +1,5 @@
 /**
- * @version 1.0.0
+ * @version 1.0.9
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -546,6 +546,10 @@ body.pweb-modal-open {
 }
 .pwebcontact-box.pweb-modal .pwebcontact-container {
 	padding: 15px;
+	/* Bootstrap 3 */
+	position: static !important;
+	width: auto !important;
+	margin: 0 !important;
 }
 .pweb-modal.modal {
 	padding: 10px;
