Removed free badge and free options/field handler. Theme support on front-end. Improved themes coverflow display. Legacy support of predefined styles. Added option to disable scrolling to success message after sending email. Hide PRO banner in forms list. Free theme.

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -825,7 +825,7 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 }
 #pweb_fields .pweb-fields-types .pweb-custom-fields-separator {
     float: left;
-    height: 40px;
+    padding: 20px 0;
     width: 100%;
 }
 
