--- a/media/css/themes/free.css
+++ b/media/css/themes/free.css
@@ -112,6 +112,12 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
 }
+/* Fields gradient */
+.pweb-theme-free.pweb-gradient form.pwebcontact-form input.pweb-input, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form select, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form textarea {
+	
+}
 /* Fields shadow */
 .pweb-theme-free.pweb-shadow form.pwebcontact-form input.pweb-input, 
 .pweb-theme-free.pweb-shadow form.pwebcontact-form select, 
@@ -120,19 +126,51 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	-moz-box-shadow: 0 0 5px #999, 0 1px 2px rgba(0,0,0,0.2) inset;
 	box-shadow: 0 0 5px #999, 0 1px 2px rgba(0,0,0,0.2) inset;
 }
+
 /* Fields invalid */
 .pweb-theme-free form.pwebcontact-form input.invalid.pweb-input, 
 .pweb-theme-free form.pwebcontact-form select.invalid, 
 .pweb-theme-free form.pwebcontact-form textarea.invalid { 
 	border-color: #f00 !important;
-	-webkit-box-shadow: 0 0 5px #f00, 0 1px 2px rgba(0,0,0,0.2) inset !important;
-	-moz-box-shadow: 0 0 5px #f00, 0 1px 2px rgba(0,0,0,0.2) inset !important;
-	box-shadow: 0 0 5px #f00, 0 1px 2px rgba(0,0,0,0.2) inset !important;
+	-webkit-box-shadow: 0 1px 2px rgba(170,0,0,0.2) inset !important;
+	-moz-box-shadow: 0 1px 2px rgba(170,0,0,0.2) inset !important;
+	box-shadow: 0 1px 2px rgba(170,0,0,0.2) inset !important;
 }
+/* Fields invalid gradient */
+.pweb-theme-free.pweb-gradient form.pwebcontact-form input.invalid.pweb-input, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form select.invalid, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form textarea.invalid { 
+    
+}
+/* Fields invalid shadow */
+.pweb-theme-free form.pwebcontact-form input.invalid.pweb-input, 
+.pweb-theme-free form.pwebcontact-form select.invalid, 
+.pweb-theme-free form.pwebcontact-form textarea.invalid { 
+	border-color: #f00 !important;
+	-webkit-box-shadow: 0 0 5px #a00, 0 1px 2px rgba(170,0,0,0.2) inset !important;
+	-moz-box-shadow: 0 0 5px #a00, 0 1px 2px rgba(170,0,0,0.2) inset !important;
+	box-shadow: 0 0 5px #a00, 0 1px 2px rgba(170,0,0,0.2) inset !important;
+}
+
 /* Fields active */
 .pweb-theme-free form.pwebcontact-form input.pweb-input:focus, 
 .pweb-theme-free form.pwebcontact-form select:focus, 
 .pweb-theme-free form.pwebcontact-form textarea:focus {
+	border-color: #000 !important;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset !important;
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset !important;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset !important;
+}
+/* Fields active gradient */
+.pweb-theme-free.pweb-gradient form.pwebcontact-form input.pweb-input:focus, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form select:focus, 
+.pweb-theme-free.pweb-gradient form.pwebcontact-form textarea:focus {
+	
+}
+/* Fields active shadow */
+.pweb-theme-free.pweb-shadow form.pwebcontact-form input.pweb-input:focus, 
+.pweb-theme-free.pweb-shadow form.pwebcontact-form select:focus, 
+.pweb-theme-free.pweb-shadow form.pwebcontact-form textarea:focus {
 	border-color: #000 !important;
 	-webkit-box-shadow: 0 0 5px #000, 0 1px 2px rgba(0,0,0,0.2) inset !important;
 	-moz-box-shadow: 0 0 5px #000, 0 1px 2px rgba(0,0,0,0.2) inset !important;
@@ -181,6 +219,17 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	border-color: #000;
 	border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
 	background: #000;
+}
+/* Buttons shadow */
+.pweb-theme-free.pweb-shadow form.pwebcontact-form button,
+.pweb-theme-free.pweb-shadow form.pwebcontact-form .btn {
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+/* Buttons gradient */
+.pweb-theme-free.pweb-gradient form.pwebcontact-form button,
+.pweb-theme-free.pweb-gradient form.pwebcontact-form .btn {
 	background-image: -moz-linear-gradient(top,#333,#000);
 	background-image: -ms-linear-gradient(top,#333, #000);
 	background-image: -webkit-gradient(linear,0 0,0 100%,from(#333),to(#000));
@@ -192,17 +241,16 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;
 }
-/* Buttons shadow */
-.pweb-theme-free.pweb-shadow form.pwebcontact-form button,
-.pweb-theme-free.pweb-shadow form.pwebcontact-form .btn {
+/* Buttons gradient shadow */
+.pweb-theme-free.pweb-shadow.pweb-gradient form.pwebcontact-form button,
+.pweb-theme-free.pweb-shadow.pweb-gradient form.pwebcontact-form .btn {
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
 }
-/* Buttons on mouse over */
-.pweb-theme-free form.pwebcontact-form button:hover,
-.pweb-theme-free form.pwebcontact-form .btn:hover {
-	background-color: #000;
+/* Buttons gradient on mouse over */
+.pweb-theme-free.pweb-gradient form.pwebcontact-form button:hover,
+.pweb-theme-free.pweb-gradient form.pwebcontact-form .btn:hover {
 	background-position: 0 -30px;
 }
 
@@ -231,8 +279,10 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	border: 1px solid;
 	border-color: #000;
-	
 	background-color: #000;
+}
+/* Toggler tab gradient */
+.pwebcontact_toggler.pweb-theme-free.pweb-gradient {
 	background-image: -moz-linear-gradient(top,#333,#000);
 	background-image: -ms-linear-gradient(top,#333, #000);
 	background-image: -webkit-gradient(linear,0 0,0 100%,from(#333),to(#000));
@@ -240,7 +290,7 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	background-image: -o-linear-gradient(top,#333,#000);
 	background-image: linear-gradient(to bottom,#333,#000);
 }
-.pweb-top .pwebcontact_toggler.pweb-theme-free {
+.pweb-top .pwebcontact_toggler.pweb-theme-free.pweb-gradient {
 	background-image: -moz-linear-gradient(bottom,#333,#000);
 	background-image: -ms-linear-gradient(bottom,#333, #000);
 	background-image: -webkit-gradient(linear,0 100%,0 0,from(#333),to(#000));
@@ -248,7 +298,7 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	background-image: -o-linear-gradient(bottom,#333,#000);
 	background-image: linear-gradient(to top,#333,#000);
 }
-.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free {
+.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free.pweb-gradient {
 	background-image: -moz-linear-gradient(right,#333,#000);
 	background-image: -ms-linear-gradient(right,#333, #000);
 	background-image: -webkit-gradient(linear,100% 0,0 0,from(#333),to(#000));
@@ -256,7 +306,7 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	background-image: -o-linear-gradient(right,#333,#000);
 	background-image: linear-gradient(to left,#333,#000);
 }
-.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free {
+.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free.pweb-gradient {
 	background-image: -moz-linear-gradient(left,#333,#000);
 	background-image: -ms-linear-gradient(left,#333, #000);
 	background-image: -webkit-gradient(linear,0 0,100% 0,from(#333),to(#000));
@@ -264,21 +314,21 @@ body.pweb-modal-white .modal-backdrop.fade.in {
 	background-image: -o-linear-gradient(left,#333,#000);
 	background-image: linear-gradient(to right,#333,#000);
 }
-
-.pwebcontact_toggler.pweb-theme-free:hover,
-.pwebcontact_toggler.pweb-theme-free.pweb-opened {
+/* Toggler tab gradient hover and opened */
+.pwebcontact_toggler.pweb-theme-free.pweb-gradient:hover,
+.pwebcontact_toggler.pweb-theme-free.pweb-gradient.pweb-opened {
 	background-image: none !important;
 	background-position: 0 -30px;
 }
-.pweb-top .pwebcontact_toggler.pweb-theme-free:hover,
-.pweb-top .pwebcontact_toggler.pweb-theme-free.pweb-opened {
+.pweb-top .pwebcontact_toggler.pweb-theme-free.pweb-gradient:hover,
+.pweb-top .pwebcontact_toggler.pweb-theme-free.pweb-gradient.pweb-opened {
 	background-position: 0 30px;
 }
-.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free:hover,
-.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free.pweb-opened {
+.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free.pweb-gradient:hover,
+.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-theme-free.pweb-gradient.pweb-opened {
 	background-position: -30px 0;
 }
-.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free:hover,
-.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free.pweb-opened {
+.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free.pweb-gradient:hover,
+.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-theme-free.pweb-gradient.pweb-opened {
 	background-position: 30px 0;
 }
