--- a/media/css/uploader.css
+++ b/media/css/uploader.css
@@ -1,5 +1,5 @@
 /**
- * @version 1.0.0
+ * @version 2.0.0
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -22,6 +22,11 @@
 	cursor: pointer;
 	opacity: 0;
 	-ms-filter: 'alpha(opacity=0)';
+}
+
+/* progress bar */
+.pweb-uploader .progress.progress-striped .bar.progress-bar {
+	background-color: #666;
 }
 
 /* drop zone */
