--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -293,6 +293,21 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     text-align: center;
     margin: 0 auto 20px auto;
 }
+#pweb-themes-coverflow-controls .button {
+    vertical-align: middle;
+}
+#pweb-themes-coverflow-control-load {
+    font-size: 20px;
+    height: 42px;
+    line-height: 36px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+#pweb-themes-coverflow-control-reset {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 
 .pweb-width-33 {
     width: 33.3%;
@@ -546,9 +561,6 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     margin-left: auto;
     margin-right: auto;
     display: block;
-    font-size: 20px;
-    height: 38px;
-    line-height: 36px;
 }
 
 
@@ -1058,6 +1070,11 @@ code {
 .pweb-alert .button,
 .pweb-alert .button:focus {
     vertical-align: middle;
+}
+
+.pweb-field-control .pweb-alert {
+    margin-top: 10px;
+    margin-right: 10px;
 }
 
 /* jQuery UI Tooltips */
