--- a/media/css/themes/note.css
+++ b/media/css/themes/note.css
@@ -6,7 +6,7 @@
  * @author Jan Krzywanek
  */
 
-@import url(http://fonts.googleapis.com/css?family=Italianno&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=Italianno&subset=latin,latin-ext);
 
 /* Form background */
 .pweb-theme-note .pwebcontact-container:before {
