* Added Google Recaptcha field in PRO version, * Allow to rename plugin directory, * Fixed hidding tooltips in Bootstrap 3, * Fixed modal backdrop opacity in Bootstrap 3

--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -1,7 +1,7 @@
 /**
- * @version 2.0.8
+ * @version 2.0.18
  * @package Perfect Easy & Powerful Contact Form
- * @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
+ * @copyright © 2015 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
  * @author Piotr Moćko
  */
@@ -1158,6 +1158,9 @@ form.pwebcontact-form label .pweb-asterisk {
 }
 .fade.in {
 	opacity: 1;
+}
+.modal-backdrop.in {
+	opacity: 0.5;
 }
 
 .pweb-init.pweb-slidebox {
