--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -1,5 +1,5 @@
 /**
- * @version 2.0.18
+ * @version 2.1.0
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2015 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -965,7 +965,12 @@ form.pwebcontact-form label.invalid a {
  * ---------------------------------------------------------------------
  */
 form.pwebcontact-form .pweb-field-captcha .pweb-field {
-	overflow: auto;
+	overflow-x: auto;
+	overflow-y: hidden;
+}
+form.pwebcontact-form .pweb-field-captcha iframe {
+	margin: 0 !important;
+    vertical-align: middle !important;
 }
 
 /* Calendar
