--- a/media/css/themes/dev.css
+++ b/media/css/themes/dev.css
@@ -150,7 +150,7 @@
 	
 }
 /* Lightbox Window overlay */
-body.pweb-modal-dev .modal-backdrop.fade.in {
+body.pweb-theme-dev-modal .modal-backdrop.fade.in {
 	
 }
 
