--- a/media/css/themes/free.css
+++ b/media/css/themes/free.css
@@ -64,7 +64,7 @@
 	
 }
 /* Lightbox Window overlay */
-body.pweb-modal-free .modal-backdrop.fade.in {
+body.pweb-theme-free-modal .modal-backdrop.fade.in {
 	
 }
 
