--- a/media/css/themes/notebook.css
+++ b/media/css/themes/notebook.css
@@ -1,5 +1,5 @@
 /**
- * @version 2.1.0
+ * @version 2.1.1
  * @package Perfect Easy & Powerful Contact Form
  * @copyright © 2015 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
  * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
@@ -123,7 +123,7 @@
     margin-top: 30px;
 }
 
-.pweb-accordion.pweb-accordion-boxed .pweb-button-close {
+.pweb-accordion.pweb-accordion-boxed.pweb-theme-notebook .pweb-button-close {
     top: 10px;
 }
 
