Added CSS classes for new field types

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -852,13 +852,17 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 .pweb-custom-field-type-text,
 .pweb-custom-field-type-textarea,
 .pweb-custom-field-type-date,
-.pweb-custom-field-type-password {
+.pweb-custom-field-type-password,
+.pweb-custom-field-type-url,
+{
     background-color: #2EA2CC;
 }
 .pweb-custom-field-type-radio,
 .pweb-custom-field-type-checkboxes,
 .pweb-custom-field-type-select,
-.pweb-custom-field-type-multiple {
+.pweb-custom-field-type-multiple,
+.pweb-custom-field-type-state,
+.pweb-custom-field-type-country{
     background-color: #1FAD45;
 }
 .pweb-custom-field-type-custom_text,
